<resources>
    <string name="app_name">Gravity Runner</string>
    <string name="label_playButton">Play</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btnCreate">Create Account</string>
    <string name="btnLogIn">Log In</string>
    <string name="eAccount">Enter your Account</string>
    <string name="ePass">Enter your Password</string>
    <string name="loginSuccess">Hello %1$s!</string>
    <string name="loginFail">Failed! Please check your email and password</string>
    <string name="successCreate">Success to create an account</string>
    <string name="short_password">password is too short</string>
    <string name="emptyAccount">Please fill ID and Password values</string>
    <string name="beforePlay">Before play..</string>
    <string name="loginFirst">Would you like to log in first?</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="btnLevel">level select</string>
    <string name="btnStore">store</string>
    <string name="btnBoard">Leader Board</string>
    <string name="btnOut">logout</string>
    <string name="btnQuit">quit</string>
    <string name="level_activity">Level Select</string>
    <string name="user_activity">User Profile</string>
    <string name="logout">Logged out successfully</string>
    <string name="fail_logout">Failed to logout</string>
    <string name="noUser">You didn\'t login</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
    <string name="locked">Locked</string>
    <string name="click">Click</string>
    <string name="level">Level \t %1$d</string>
    <string name="score">Score \t %1$d</string>
    <string name="coin">Coin \t %1$d</string>
    <string name="fail_menu_title">You Died</string>
    <string name="fail_menu_message">Would you like to…</string>
    <string name="fail_menu_btn_restart">Restart The Level</string>
    <string name="fail_menu_btn_return_to_level_select">Return To Level Select</string>
    <string name="pause_menu_title">Paused</string>
    <string name="pause_menu_message">Would you like to…</string>
    <string name="pause_menu_btn_restart">Restart Level</string>
    <string name="pause_menu_btn_return_to_level_select">Return To Level Select</string>
    <string name="pause_menu_btn_resume">Resume</string>
    <string name="finished_menu_title">Finished!!</string>
    <string name="finished_menu_message">Would you like to…</string>
    <string name="finished_menu_btn_continue">Continue To Next Level</string>
    <string name="finished_menu_btn_return_to_level_select">Return To Level Select</string>
    <string name="app_bar_pause">pause</string>
    <string name="leaderBoard">Leader Board</string>
    <string name="leaderTitle">Level %1$d</string>
    <string name="uncleared">Uncleared</string>
    <string name="lbl_coins">Coins:</string>
    <!-- Level Names 1,2,3,4, and 5-->
    <string name="level1">Introduction</string>
    <string name="level2">Hidden Point</string>
    <string name="level3">The Right Path</string>
    <string name="level4">Sea of Teeth</string>
    <string name="level5">Finale</string>
</resources>
