<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <Button
            android:text="@string/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogIn" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/ePass" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btnCreate"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/btnCreate"/>
    <EditText
            android:layout_width="218dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/eAccount" android:layout_marginTop="132dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/eAccount"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ePass" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/eAccount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.503" android:hint="@string/ePass"
            android:inputType="textPassword"/>
</android.support.constraint.ConstraintLayout>