<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

<include layout="@layout/toolbar_user_profile"/>
    <Button
            android:text="@string/btnLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLevel" android:layout_marginTop="136dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494"/>
    <Button
            android:text="@string/btnStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStore" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLevel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/btnOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOut"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStore"/>
    <Button
            android:text="@string/btnQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnQuit" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOut" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tCoin1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"/>


</android.support.constraint.ConstraintLayout>